--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>HandleBars Practice</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script type="text/javascript" src="handlebars-v4.0.4.js">
+    <script type="text/javascript" src="javascripts/handlebars-v4.0.4.js">
     </script>
-    <script type="text/javascript" src="app.js">
+    <script type="text/javascript" src="javascripts/app.js">
     </script>
   </head>
   <body>
